--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,8 @@ dependencies = [
     "platformdirs>=4.0.0",
     "loguru>=0.7.0",
     "rich>=13.0.0",
+    "macdefaultbrowsy>=1.0.0",
+    "aiohttp>=3.8.0",
 ]
 
 # Author information
